<resources>
    <string name="app_name">Food Cloud</string>
    <string name="title_activity_login">Sign in</string>
    <string name="prompt_username">Username</string>
    <string name="fullname">Full name</string>
    <string name="prompt_password">Password</string>
    <string name="prompt_password2">Confirm Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_register">Register</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="reg_title">"CREATE AN ACCOUNT"</string>
    <string name="reg_submit">"REGISTER"</string>
    <string name="phone">"Phone Number"</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_order">Reservations</string>
    <string name="menu_currentorder">Current Order</string>
    <string name="menu_tools">Profile Settings</string>

    <string name="menu_info">About Application</string>

    <string name="title_activity_table_sel">table_sel</string>

    <string name="access_token">pk.eyJ1IjoiaGViYTAiLCJhIjoiY2oyajQxenNiMDAzYTJ4cGQyZzRvNms0aSJ9.RV_wnszP15bjliptZxT9MQ</string>
    <string name="user_location_permission_explanation">This app needs location permissions to show its functionality.</string>
    <string name="user_location_permission_not_granted">You didn\'t grant location permissions.</string>
</resources>
