<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home_black_24dp"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_order"
            android:icon="@drawable/ic_view_list_black_24dp"
            android:title="@string/menu_order" />
        <item
            android:id="@+id/nav_currentorder"
            android:icon="@drawable/ic_star_border_black_24dp"
            android:title="@string/menu_currentorder" />
        <item
            android:id="@+id/nav_tools"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/menu_tools" />
    </group>

    <item android:title="Other">
        <menu>
            <item
                android:id="@+id/nav_info"
                android:icon="@drawable/ic_info_black_24dp"
                android:title="@string/menu_info" />
            <item
                android:id="@+id/nav_logout"
                android:enabled="true"
                android:icon="@drawable/ic_exit_to_app_black_24dp"
                android:title="Logout" />
        </menu>
    </item>


</menu>
