<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home"
    >

    <fragment
        android:id="@+id/nav_home"
        android:name="com.AUC.mob_apps_project.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_order"
        android:name="com.AUC.mob_apps_project.ui.gallery.GalleryFragment"
        android:label="@string/menu_order"
        tools:layout="@layout/fragment_gallery" />

    <fragment
        android:id="@+id/nav_currentorder"
        android:name="com.AUC.mob_apps_project.ui.slideshow.SlideshowFragment"
        android:label="@string/menu_currentorder"
        tools:layout="@layout/fragment_slideshow" />

    <fragment
        android:id="@+id/nav_tools"
        android:name="com.AUC.mob_apps_project.ui.tools.ToolsFragment"
        android:label="@string/menu_tools"
        tools:layout="@layout/fragment_tools" />


    <fragment
        android:id="@+id/nav_info"
        android:name="com.AUC.mob_apps_project.ui.send.SendFragment"
        android:label="@string/menu_info"
        tools:layout="@layout/fragment_send" />

    <fragment
        android:id="@+id/nav_logout"
        android:name="com.AUC.mob_apps_project.ui.logout.FragmentLogout"
        android:label="Logout"
        tools:layout="@layout/fragment_logout" />
</navigation>