<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:background="#940D21"
    tools:context=".ui.login.LoginActivity">

    <ProgressBar
        android:id="@+id/loading"
        android:layout_width="8dp"
        android:layout_height="9dp"
        android:layout_gravity="center"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="16dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/imageView3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                app:srcCompat="@drawable/logo" />

            <EditText
                android:id="@+id/username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="26dp"
                android:layout_marginEnd="24dp"
                android:backgroundTint="#FFFFFF"
                android:hint="@string/prompt_username"
                android:inputType="textEmailAddress"
                android:selectAllOnFocus="true"
                android:textColor="#FFFFFF"
                android:textColorHint="#E8A1A1"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="26dp"
                android:layout_marginEnd="24dp"
                android:backgroundTint="#FFFFFF"
                android:hint="@string/prompt_password"
                android:imeActionLabel="@string/action_sign_in"
                android:imeOptions="actionDone"
                android:inputType="textPassword"
                android:selectAllOnFocus="true"
                android:textColor="#FFFFFF"
                android:textColorHint="#E8A1A1"
                android:textStyle="bold"
                android:theme="@style/EditTextTheme" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="26dp"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/register"
                    style="@style/Widget.AppCompat.Button"
                    android:layout_width="200dp"
                    android:layout_height="match_parent"
                    android:layout_marginStart="10dp"
                    android:layout_marginEnd="10dp"
                    android:layout_weight="1"
                    android:background="@drawable/custombutton1"
                    android:enabled="true"
                    android:foreground="@drawable/rippleeffect"
                    android:text="@string/action_register"
                    android:textColor="#FFFFFF"
                    android:textStyle="bold" />


                <Button
                    android:id="@+id/login"
                    style="@style/Widget.AppCompat.Button"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_marginEnd="10dp"
                    android:layout_weight="1"
                    android:background="@drawable/custombutton1"
                    android:foreground="@drawable/rippleeffect"
                    android:lineSpacingExtra="8sp"
                    android:text="@string/action_sign_in"
                    android:textColor="#FCFCFC"
                    android:textStyle="bold" />
            </LinearLayout>

        </LinearLayout>
    </RelativeLayout>

</androidx.constraintlayout.widget.ConstraintLayout>