<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:background="#940D21"
    tools:context=".RegisterActivity">

    <ProgressBar
        android:id="@+id/loading"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <RelativeLayout
        android:id="@+id/relativeLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="16dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/imageView3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                app:srcCompat="@mipmap/ic_launcher_foreground" />

            <TextView
                android:id="@+id/RegisterTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/reg_title"
                android:textAlignment="center"
                android:textColor="#FFFFFF"
                android:textSize="24sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/fullname"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="26dp"
                android:layout_marginEnd="24dp"
                android:backgroundTint="#FFFFFF"
                android:hint="@string/fullname"
                android:inputType="textPersonName"
                android:selectAllOnFocus="true"
                android:textColor="#FFFFFF"
                android:textColorHint="#E8A1A1"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="26dp"
                android:layout_marginEnd="24dp"
                android:backgroundTint="#FFFFFF"
                android:hint="Email"
                android:inputType="textEmailAddress"
                android:selectAllOnFocus="true"
                android:textColor="#FFFFFF"
                android:textColorHint="#E8A1A1"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="26dp"
                android:layout_marginEnd="24dp"
                android:backgroundTint="#FFFFFF"
                android:hint="@string/prompt_password"
                android:imeActionLabel="@string/action_sign_in"
                android:imeOptions="actionDone"
                android:inputType="textPassword"
                android:selectAllOnFocus="true"
                android:textColor="#FFFFFF"
                android:textColorHint="#E8A1A1"
                android:textStyle="bold"
                android:theme="@style/EditTextTheme" />

            <EditText
                android:id="@+id/password2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="26dp"
                android:layout_marginEnd="24dp"
                android:backgroundTint="#FFFFFF"
                android:hint="@string/prompt_password2"
                android:imeActionLabel="@string/action_sign_in"
                android:imeOptions="actionDone"
                android:inputType="textPassword"
                android:selectAllOnFocus="true"
                android:textColor="#FFFFFF"
                android:textColorHint="#E8A1A1"
                android:textStyle="bold"
                android:theme="@style/EditTextTheme" />

            <TextView
                android:id="@+id/phone_verified"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="0dp"
                android:layout_marginTop="20dp"
                android:layout_weight="0.001"
                android:text="(+20)"
                android:textAlignment="center"
                android:textAllCaps="false"
                android:textColor="#FFFFFF"
                android:textSize="18sp"
                android:textStyle="bold|italic"
                tools:visibility="gone" />

            <LinearLayout
                android:id="@+id/num"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom|center"
                android:layout_marginTop="26dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="24dp"
                    android:layout_weight="0.001"
                    android:text="(+20)"
                    android:textColor="#FFFFFF"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/phone"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:layout_marginTop="0dp"
                    android:layout_marginEnd="5dp"
                    android:layout_weight="1"

                    android:backgroundTint="#FFFFFF"
                    android:hint="@string/phone"
                    android:imeOptions="actionDone"
                    android:inputType="phone"
                    android:selectAllOnFocus="true"
                    android:textColor="#FFFFFF"
                    android:textColorHint="#E8A1A1"
                    android:textStyle="bold"
                    android:theme="@style/EditTextTheme" />

                <Button
                    android:id="@+id/reg_send"
                    style="@style/Widget.AppCompat.Button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="0dp"
                    android:layout_marginEnd="24dp"
                    android:layout_weight="0.2"
                    android:background="@drawable/custombutton1"
                    android:enabled="true"
                    android:foreground="@drawable/rippleeffect"
                    android:minWidth="44dip"
                    android:minHeight="24dip"
                    android:text="Send"
                    android:textColor="#FFFFFF"
                    android:textSize="10sp"
                    android:textStyle="bold" />


            </LinearLayout>

            <LinearLayout
                android:id="@+id/verf"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="bottom|center"
                android:layout_marginTop="26dp"
                android:orientation="horizontal"
                tools:visibility="gone">

                <EditText
                    android:id="@+id/code"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="24dp"
                    android:layout_marginTop="0dp"
                    android:layout_marginEnd="24dp"
                    android:layout_weight="1"
                    android:backgroundTint="#FFFFFF"
                    android:hint="Confirmation Code"
                    android:inputType="text"
                    android:selectAllOnFocus="true"
                    android:textColor="#FFFFFF"
                    android:textColorHint="#E8A1A1"
                    android:textStyle="bold"
                    android:visibility="visible" />

                <Button
                    android:id="@+id/reg_verify"
                    style="@style/Widget.AppCompat.Button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="0dp"
                    android:layout_marginEnd="24dp"
                    android:layout_weight="0.2"
                    android:background="@drawable/custombutton1"
                    android:enabled="true"
                    android:foreground="@drawable/rippleeffect"
                    android:minWidth="88dip"
                    android:minHeight="24dip"
                    android:text="Verify"
                    android:textColor="#FFFFFF"
                    android:textSize="10sp"
                    android:textStyle="bold" />


            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom|center"
                android:layout_marginTop="26dp"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/reg_back"
                    style="@style/Widget.AppCompat.Button"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginStart="10dp"
                    android:layout_marginEnd="10dp"
                    android:layout_weight="100"
                    android:background="@drawable/custombutton1"
                    android:enabled="true"
                    android:foreground="@drawable/rippleeffect"
                    android:text="back"
                    android:textColor="#FFFFFF"
                    android:textStyle="bold" />

                <Button
                    android:id="@+id/reg_submit"
                    style="@style/Widget.AppCompat.Button"
                    android:layout_width="200dp"
                    android:layout_height="match_parent"
                    android:layout_marginStart="10dp"
                    android:layout_marginEnd="10dp"
                    android:layout_weight="1"
                    android:background="@drawable/custombutton1"
                    android:enabled="true"
                    android:foreground="@drawable/rippleeffect"
                    android:text="@string/reg_submit"
                    android:textColor="#FFFFFF"
                    android:textStyle="bold" />


            </LinearLayout><![CDATA[

            ;
                app:layout_constraintTop_toTopOf="parent" />

        ]]>
        </LinearLayout>
    </RelativeLayout>

</androidx.constraintlayout.widget.ConstraintLayout>